--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   cupertino_icons: ^0.1.2
 
   english_words: ^3.1.5
+  flutter_redux:
+  redux:
+  meta:
 
 dev_dependencies:
   flutter_test:
